# eegdev

./: .gitignore  Makefile.am  README  README.md  configure.ac
auxconfig/: 90-eego.rules
doc/: Makefile.am  eegdev-barv.5  eegdev-eego.5  eegdev-gtec.5  eegdev-gtecnet.5  eegdev-wsdsi.5
lib/: .gitignore
m4/: .gitignore
src/plugins/: DSI_API_Loader.c  Makefile.am  barv.c  biosemi.c  eego.c  eego_wrapper.h  fileout.c  gtec.c  gtecnet.c  lsl.c  neurone.c  q20.c  quick20.c  wsdsi.c
